Phase one, app-header component added

--- a/frontend/src/app/_pages/about/about.component.html
+++ b/frontend/src/app/_pages/about/about.component.html
@@ -1,7 +1,6 @@
-<header class="top">
-    <h1><b>The bug</b> that changes everything</h1>
-    <h2>From Buggypedia, the bugged encyclopedia</h2>
-</header>
+<app-header>
+    <h1>The bug <span>that changes everything</span></h1>
+</app-header>
 <main>
     <div class="content">
         <p>
