frontend loading overlay added

--- a/frontend/src/app/_pages/phase-one/phase-one.component.html
+++ b/frontend/src/app/_pages/phase-one/phase-one.component.html
@@ -1,3 +1,10 @@
 <app-header>
     <h1>Draw the bug part</h1>
 </app-header>
+<main>
+    <p>Draw the part of the bug. You have only one try. Submit it when you are ready.</p>
+    <canvas width="500" height="500"></canvas>
+    <div>
+        <img src="" alt="">
+    </div>
+</main>
