--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,3 +9,6 @@
 </header>
 <app-sidebar></app-sidebar>
 <router-outlet></router-outlet>
+<div class="loading-overlay" *ngIf="loading">
+  <div class="loading"></div>
+</div>
