--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -41,3 +41,16 @@ app-sidebar {
     height: 100%;
     width: 225px;
 }
+
+div.loading-overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    animation: fadeInOpacity .15s forwards;
+    animation-delay: .75s;
+}
