--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,6 +19,7 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+    min-width: 800px;
 }
 
 * {
@@ -63,4 +64,38 @@ header.top {
 
 main {
     margin-top: 1.5rem;
+}
+
+div.loading {
+    opacity: 0;
+    width: 75px;
+    height: 75px;
+    border:solid 7.6px #ffffff;
+    border-radius: 50%;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    animation-name: fadeInOpacity, rotate; 
+    animation-duration: .15s, 1.25s; 
+    animation-iteration-count: 1, infinite;
+    animation-timing-function: linear, linear;
+    animation-delay: .65s, .7s;
+    animation-fill-mode: forwards;  
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to { 
+        transform: rotate(360deg);
+    }
 }
